--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Native Training with Certification in Mumbai | JustAcademy</title>
     <meta name="description" content="Enroll in certified React Native training in Mumbai. Get industry-recognized certification, placement assistance, and master mobile app development. Book a free demo session today!">
-    <meta name="keywords" content="React Native Training, React Native Certification, Certified React Native Course, React Native Course in Mumbai, React Native Training in Mumbai, Mobile App Development Course">
+    <meta name="keywords" content="React Native Training, React Native Certification, Certified React Native Course, React Native Course in Mumbai, React Native Training in Mumbai,Certified React Native Training">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
