--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             </div>
             <div class="benefit-card">
                 <div class="benefit-icon">
-                    <i class="fa-solid fa-file-certificate"></i>
+                    <i class="fa-solid fa-rocket fa-2x"></i>
                 </div>
                 <h3>Certified Program</h3>
                 <p>Earn a valuable certification recognized by employers</p>
