--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         
         <div class="cta-container">
             <a href="https://www.justacademy.co/register-for-course-demo" class="btn btn-primary">
-                <i class="fas fa-graduation-cap"></i> Enroll Now - Limited Seats!
+                <i class="fas fa-graduation-cap"></i> Book a free Demo Session
             </a>
             <a href="https://www.justacademy.co/" class="btn btn-secondary">
                 <i class="fas fa-book-open"></i> Explore All Courses
