--- a/index.html
+++ b/index.html
@@ -451,7 +451,11 @@
         </div>
         
         <footer>
-            <p>JustAcademy - React Native Training Center in Mumbai</p>
+            <p>Office no : 318, Imperia T2 Commercial,
+JP-North, Mira Bhayander Rd,
+Near to Arkade Art Complex,
+Vinay Nagar, Kashimira, Mira Road,
+Mumbai, Maharashtra 401107</p>
             <p>© 2023 JustAcademy. All rights reserved.</p>
             <p>Industry-Recognized Certification | Placement Assistance | Hands-on Training</p>
         </footer>
