--- a/index.html
+++ b/index.html
@@ -518,6 +518,11 @@
                     <h3>Expert Trainers</h3>
                     <p>Learn from certified professionals with years of experience in React development and training.</p>
                 </div>
+                <div class="highlight-card">
+                    <i class="fas fa-rocket"></i>
+                    <h3>Placement Assistance</h3>
+                    <p>Get assistance with landing your first Job or Internship. Practice through mock interviews.</p>
+                </div>
             </div>
         </div>
     </section>
